docs(netty): close batch-02 — 14/15 match HotSpot with no new fix needed
Triaged all 15 io.netty.buffer classes on batch page 02 against stock HotSpot
JDK 25, one VM per class, on a binary built from dev tip 6d1bfd531.

No CratonVM fix was needed. Every assertion failure on this page had already
been cleared by fixes that landed on dev first: batch-01's ByteArrayInputStream
EOF ordering and zero-length direct-buffer copy, and batch-07's
StackWalker$Option nameless enum constants (which repaired ReadOnlyByteBufTest
exactly as that page predicted). Ten of the fifteen were recorded HANG and are
now clean passes in 11-173s - the wall-cap artefact the INDEX already warns
about.

Three of these classes do not run at all on stock HotSpot:
BigEndian/LittleEndianUnsafeDirectByteBufTest gate every test on
assumeTrue(hasUnsafe()), and PooledAlignedBigEndianDirectByteBufTest gates its
@BeforeAll on isDirectMemoryCacheAlignmentSupported(). Both are false on
HotSpot 25 and true on CratonVM, so the plain baseline reports aborted=413 /
aborted=412 / started=0 - no oracle for ~1240 tests CratonVM does run. Running
HotSpot with --sun-misc-unsafe-memory-access=allow puts it on CratonVM's netty
code path: 413/413, 412/412, 417/417, and CratonVM matches all three exactly.
That technique is now written up on the unsafe-property page as a triage
instrument (not a target state).

The one blocker is JfrEventsTest, 0/10, filed with two new records:

  jfr-recordingstream-delivers-no-events-20260812.md
    All 10 tests block on a JFR event that never arrives and die at the class's
    own @Timeout(10) - deterministic, 0/10 in 100.7s solo on an idle box, so
    not the throughput gap. Reproduced in 60 lines with no netty. Mechanism:
    RecordingStream.startAsync() is a documented whole-method no-op (its real
    body's last statement polls an on-disk chunk repository CratonVM does not
    produce), so the recording never goes active, Event.isEnabled() and
    shouldCommit() - both natives rea